--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,19 @@
+prebuilds/fullsdk-linux
+prebuilds/fullsdk-darwin
+out
 *.iml
-.kotlin
 .gradle
-**/build/
-xcuserdata
-!src/**/build/
-local.properties
-.idea
+/local.properties
+/.idea
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
 .DS_Store
-captures
+build/
+/captures
 .externalNativeBuild
 .cxx
-*.xcodeproj/*
-!*.xcodeproj/project.pbxproj
-!*.xcodeproj/xcshareddata/
-!*.xcodeproj/project.xcworkspace/
-!*.xcworkspace/contents.xcworkspacedata
-**/xcshareddata/WorkspaceSettings.xcsettings
+output/
